agregando texto de prueba

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Bienvenido a este test</h1>
     <p>Abordaremos Git desde cero para nuestros cambios</p>
+    <p>Agregando texto de prueba</p>
 </body>
 </html>
