commit al master del blogspot en su version mas reciente

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>Proyecto inicial Git</title>
 </head>
 <body>
-    <h1>Bienvenido a este test</h1>
-    <p>Abordaremos Git desde cero para nuestros cambios</p>
-    <p>Agregando texto de prueba</p>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
