--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque laborum at assumenda error soluta asperiores! Nihil natus nulla tempora quisquam. Explicabo aut ducimus illum aliquid dignissimos, omnis nobis consequuntur hic?</p>
         </div>
     </div>
 </body>
