--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Y este es el parrafo de maestro donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus reprehenderit sunt distinctio similique odio nesciunt sit, esse laborum, nulla, eaque quam eum. Blanditiis, excepturi incidunt! Fugiat animi magni optio nostrum.</p>
+                <p>Subscribete y dale like 2</p>
             </div>
         </div>
     </body>
